Replaced usage of apache.commons and eliminated null annotation errors